--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/router": "^19.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.7",
+    "ng2-charts": "^7.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
