--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.7",
+    "linearicons": "^1.0.1",
     "ng2-charts": "^7.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.5",
